2001-09-05  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Actor): Fiddling with follow() again.

	* frameseq.h: Find_unrotated() added to make walking a bit smoother.

2001-09-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/Makefile.am: let automake handle the .l and .y files

2001-09-04  Max Horn  <max@quendi.de>
	* worked on the configure system, re-added various files back to CVS,
	like config.guess, config.sub etc. Those will be re-generated by
	autogen.sh if needed, but the supplied version should be just fine usually
	
2001-09-04  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/chunks.cc:  Rewrote part of is_blocked() to handle the way
	SI specifies locations in path_run_usecode().

2001-09-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: fixed minor bug

2001-09-03  Ryan Nunn <triforce@merlin.net.au>
	* audio/midi_drivers/win_midiout.cc : Fixed 'Lising' typo.
	* objs/chunks.cc : Namespace

2001-09-03  Max Horn  <max@quendi.de>
	* all Makefiles/configure.in: bumped version to 0.95cvs
	* configure.in: OS X specific changes; properly use the SDL
	check supplied with SDL in sdl.m4 (this also required changes
	to all the Makefile.am files)
	* Info.plist.in: updated to match configure.in

2001-09-03  Dominik Reichardt <gigdr@tesionmail.de>
	* FAQ and docs/faq/exult_faq.xml: updated FAQ	
	* README and docs/readme/readme.xml: Updated Documentation

2001-09-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/chunks.cc: fixed crash (is_roof() needs tile coords, not abs.)

2001-09-01  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc,chunks.cc:  Wrote find_spot(), a smarter finder of
	free areas for things.  Still fiddling with it.
	* actors.cc,paths.cc:  When a companion fails to find a path
	towards the Avatar, he/she now tries to walk offscreen, then
	return.  Helps avoid slowdowns.

2001-09-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>