@@ -2158,18 +2158,20 @@ int Actor::add
 	index = find_best_spot(obj);// Where should it go?
 		
 	if (index < 0)			// No free spot?  Look for a bag.
-		{
-		if (spots[back] && spots[back]->drop(obj))
-			return (1);
-		if (spots[belt] && spots[belt]->drop(obj))
-			return (1);
-		if (spots[lhand] && spots[lhand]->drop(obj))
-			return (1);
-		if (spots[rhand] && spots[rhand]->drop(obj))
-			return (1);
+	{
+		if (!dont_check) {
+			if (spots[back] && spots[back]->drop(obj))
+				return (1);
+			if (spots[belt] && spots[belt]->drop(obj))
+				return (1);
+			if (spots[lhand] && spots[lhand]->drop(obj))
+				return (1);
+			if (spots[rhand] && spots[rhand]->drop(obj))
+				return (1);
+		}
 		return dont_check ? Container_game_object::add(obj, dont_check)
 					: 0;
-		}
+	}
 					// Add to ourself.
 	if (!Container_game_object::add(obj, 1))
 		return (0);
